--- a/src/assets/css/mediaQueries.scss
+++ b/src/assets/css/mediaQueries.scss
@@ -253,4 +253,16 @@
             }
         }
     }
+
+    .darkmode-toggle {
+        top: 10px;
+        right: 10px;
+        width: 28px;
+        height: 28px;
+        font-size: 1rem;
+    }
+
+    .toggle-icon {
+        font-size: 1.1rem;
+    }
 }
